# Developer-s-test-task

./: README.md  checker.py  pyproject.toml  tg_sender.py
