[tool.poetry]
name = "developer's test task"
version = "0.1.0"
description = ""
authors = ["Konstantin Antonov <kostaantonov59@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
